test/resources/typer/failing/CallError5.scala
object Call {
    Std.printString(1)
}